# series

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json
src/: audio.cpp  main.cpp  main_old.cpp
web/: .proxyrc.js  Database.tsx  DragStack.tsx  Entry.tsx  Notebook.tsx  cas.mjs  cas.mjsteral  cas.wasm.map  cas.worker.js  index.html  index.tsx  package-lock.json  package.json
web/db/: db.json
